tests/baselines/reference/checkSpecialPropertyAssignments.errors.txt
bug24252.js(8,9): error TS2322: Type 'string[]' is not assignable to type 'number[]'.
  Type 'string' is not assignable to type 'number'.


==== bug24252.js (1 errors) ====
    var A = {};
    A.B = class {
        m() {
            /** @type {string[]} */
            var x = [];
            /** @type {number[]} */
            var y;
            y = x;
            ~
!!! error TS2322: Type 'string[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
        }
    };
    